--- a/.gitignore
+++ b/.gitignore
@@ -138,6 +138,7 @@ celerybeat.pid
 .env
 .envrc
 .venv
+venv
 env/
 venv/
 ENV/
@@ -205,3 +206,45 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# --- DODATKOWE WPISY GITIGNORE ---
+
+# 1. IDE / EDYTORY (Pamiętaj o odkomentowaniu)
+# -----------------------------------------
+.idea/          # PyCharm / JetBrains
+.vscode/        # Visual Studio Code
+
+# 2. DATA SCIENCE / MACHINE LEARNING
+# -----------------------------------------
+# Zbiory danych
+data/
+datasets/
+
+# Wytrenowane modele i inne pliki binarne
+*.pkl
+*.pickle
+*.h5
+*.hdf5
+*.pt 
+*.pth
+*.joblib
+*.onnx
+
+# Pliki z wynikami / logami
+logs/
+results/
+output/
+
+# 3. DANE WRAŻLIWE
+# -----------------------------------------
+config_local.py
+secrets.py
+*.key
+*.pem
+
+# 4. PLIKI SYSTEMOWE
+# -----------------------------------------
+.DS_Store
+Thumbs.db
+
+outputs/
